# spheresim

./: .gitignore  .gitmodules  .travis.yml  Billiard.s2c  Billiard_not_symm.s2c  CHANGELOG  CMakeLists.txt  Calculations_Qt5.ui  Calculator.cpp  Calculator.h  Circles.cpp  Circles.h  CirclesCalculator.cl  CirclesHolder.h  ClTimer.cpp  ClTimer.h  CudaCalculator.cu  CudaCalculator.cuh  CudaCalculator.h  Dialog.cpp  Dialog.h  Dialog_Qt5.ui  Dialog_inner.h  Doxyfile.in  EigenCalculator.cpp  EigenCalculator.h  EigenCalculator_CellCountCollider.cpp  EigenCalculator_CellCountCollider.h  EigenCalculator_CellForce.cpp  EigenCalculator_CellForce.h  EigenCalculator_CellGravitation.cpp  EigenCalculator_CellGravitation.h  EigenCalculator_CellSortCollider.cpp  EigenCalculator_CellSortCollider.h  EigenCalculator_Collider.cpp  EigenCalculator_Collider.h  EigenCalculator_EfficientPairCollider.cpp  EigenCalculator_EfficientPairCollider.h  EigenCalculator_Engine.cpp  EigenCalculator_Engine.h  (+63 more)
Clients/: CMakeLists.txt  Clients.pri  Clients.pro
Clients/Benchmark/: Benchmark.pro  CMakeLists.txt
Clients/Benchmark/include/: ServerBenchmark.hpp
Clients/Benchmark/src/: ServerBenchmark.cpp  main.cpp
Clients/ClientLib/: CMakeLists.txt  ClientLib.pro
Clients/ClientLib/include/: ActionSender.hpp  FrameBuffer.hpp  SystemCreator.hpp
Clients/ClientLib/src/: ActionSender.cpp  FrameBuffer.cpp  SystemCreator.cpp
Clients/Grapher/: CMakeLists.txt  Grapher.pro  gnuplot.txt
Clients/Grapher/include/: SimulationGrapher.hpp
Clients/Grapher/src/: SimulationGrapher.cpp  main.cpp
Clients/Tester/: CMakeLists.txt  Tester.pro
Clients/Tester/include/: ServerTester.hpp
Clients/Tester/src/: ServerTester.cpp  main.cpp
Clients/Viewer/: CMakeLists.txt  Viewer.pro
Clients/Viewer/QRC/: FragmentShader.glsl  MainWindow.qrc  MainWindow.ui  Shaders.qrc  StartDialog.ui  VertexShader.glsl
Clients/Viewer/UI/: MainWindow.ui
Clients/Viewer/include/: GLWidget.hpp  MainWindow.hpp  StartDialog.hpp
Clients/Viewer/src/: GLWidget.cpp  MainWindow.cpp  StartDialog.cpp  main.cpp
Server/: CMakeLists.txt  Server.pro
Server/include/: ActionReceiver.hpp  ActionServer.hpp  Array.hpp  ButcherTableau.hpp  PhysicalConstants.hpp  SimulatedSystem.hpp  SimulationWorker.hpp  SphereCalculator.hpp  SphereManager.hpp  TwoDimArray.hpp  WorkQueue.hpp
Server/src/: ActionReceiver.cpp  ActionServer.cpp  ButcherTableau.cpp  SimulationWorker.cpp  SphereCalculator.cpp  SphereManager.cpp  WorkQueue.cpp  main.cpp
Tester/: CMakeLists.txt
Tester/include/: ServerTester.hpp
Tester/src/: ServerTester.cpp  main.cpp
Viewer/: CMakeLists.txt
Viewer/UI/: MainWindow.ui
Viewer/include/: ActionSender.hpp
Viewer/src/: ActionSender.cpp  main.cpp
buildscripts/ArchLinux/: PKGBUILD
buildscripts/ArchLinux_mingw-w64/: PKGBUILD
cmake/: AddCompilerFlag.cmake  CheckCCompilerFlag.cmake  FindOPENCL.cmake  FindThrust.cmake  OptimizeForArchitecture.cmake
include/: Actions.hpp  Connection.hpp  Console.hpp  DataTransmit.hpp  Dimension.hpp  Integrators.hpp  MessageTransmitter.hpp  Object.hpp  SimulatedSystem.hpp  Sphere.hpp  SphereTransmit.hpp  Vector.hpp  VectorLib.hpp  Version.hpp  Wall.hpp
scripts/: coverity_build.sh  release_source_packages.sh
scripts/ArchLinux/: PKGBUILD
scripts/ArchLinux_mingw-w64/: PKGBUILD
src/: Connection.cpp  Console.cpp  DataTransmit.cpp  MessageTransmitter.cpp  Object.cpp  SimulatedSystem.cpp  SphereTransmit.cpp
