PROJECT(SphereSim_Viewer)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set (PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

SET(SOURCES
	${PROJECT_SOURCE_DIR}/main.cpp
)
SET(HEADERS )

include_directories("${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_INCLUDE_DIR}")

ADD_EXECUTABLE(SphereSim_Viewer ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(SphereSim_Viewer)
